# vrpc

./: CMakeLists.txt  README.md
cmake/: uninstall.cmake
doc/: todo_lists.md
examples/: CMakeLists.txt  client.cpp  main.cpp  math.proto  proto_to_cpp.sh  rpc.hpp  server.cpp
examples/api/: math.proto
examples/api/mathpb/: math.pb.cc  math.pb.h  math.proto
examples/math/: CMakeLists.txt  proto_to_cpp.sh  tcp_client.cpp  tcp_server.cpp
examples/pb/: math.pb.cc  math.pb.h
tests/: CMakeLists.txt
vrpc/: client.hpp  server.hpp
vrpc/client/: client.hpp  consumer.hpp
vrpc/common/: callback.hpp  concept.hpp  error.hpp  method.hpp
vrpc/common/util/: crc32.hpp  noncopyable.hpp  sequence.hpp
vrpc/core/: result.hpp  status.hpp  type.hpp
vrpc/core/detail/: config.hpp  connection.hpp  protocol.hpp  request.hpp
vrpc/net/: builder.hpp  callback.hpp
vrpc/net/detail/: builder.hpp  callback.hpp  config.hpp  method.hpp
vrpc/net/pb/: message.hpp  result.hpp  status.hpp
vrpc/net/pb/detail/: channel.hpp  message.hpp
vrpc/net/tcp/: client.hpp  server.hpp  tcp_client.hpp  tcp_server.hpp
vrpc/net/tcp/detail/: manager.hpp  server_cache.hpp
vrpc/server/: context.hpp  server.hpp
vrpc/server/detail/: context.hpp  invoker.hpp  manager.hpp
